@@ -41,7 +41,17 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
 ----------------------------------------------------------------------------
 
 1)  A bug catcher has been installed in the params file processing
-    logic to help determine why parameter processing is failing. 
+    logic to help determine why parameter processing is failing.
+
+    If you see this:
+
+       BUG: get_params()
+
+    then please copy/paste the displayed information and send it to the
+    user's or developer's mailing list.
+
+    Note: Your firewall should still start/restart okay when the above
+    message appears.
 
 ----------------------------------------------------------------------------
              I V.  R E L E A S E  4 . 4  H I G H L I G H T S
